--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -5,5 +5,20 @@ sources:
     database: dbt-tutorial
     schema: jaffle_shop
     tables:
-      - name: orders
       - name: customers
+        columns:
+          - name: id
+            tests:
+              - unique
+              - not_null
+            
+      - name: orders
+        columns:
+          - name: id
+            tests:
+              - unique              
+              - not_null
+        loaded_at_field: _etl_loaded_at
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
