--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,19 +2,24 @@ version: 2
 
 models:
   - name: stg_customers
+    description: staged customer data from jaffle shop app
     columns: 
       - name: customer_id
+        description: primary key for customers
         tests:
           - unique
           - not_null
 
   - name: stg_orders
+    description: staged order data from jaffle shop app
     columns:
       - name: order_id
+        description: primary key for orders
         tests:
           - unique
           - not_null
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               values:
